Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p><strong>Package</strong>:    hydroTSM</p>
 
-<p><strong>Version</strong>:    0.4-2-14</p>
+<p><strong>Version</strong>:    0.4-3</p>
 
 <p><strong>Title</strong>:  Time Series Management, Analysis and Interpolation for Hydrological Modelling</p>
 
