Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <ul>
 <li>
-<a href="https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroTSM">https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroTSM</a> </li>
+<a href="https://github.com/hzambran/hydroTSM/issues">https://github.com/hzambran/hydroTSM/issues</a> </li>
 </ul>
 
       <footer class="site-footer">
